--- a/pacman.html
+++ b/pacman.html
@@ -8,7 +8,7 @@
   <style>
     body {
       background-color: darkslategray;
-      margin: 0px;  
+      margin: 0px;
     }
 
     .row div {
@@ -29,17 +29,23 @@
       background-repeat: no-repeat;
     }
 
-    .pacman {
+    #pacman {
       background-image: url("pacman.gif");
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;
+      position: absolute;
+      height: 20px;
+      width: 20px;
     }
   </style>
 </head>
 
 <body>
+  <div class="container">
   <div id="world"></div>
+  <div id="pacman"</div>
+  </div>
 </body>
 <script>
 
@@ -51,7 +57,7 @@
     [2, 1, 1, 2, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2],
     [2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2],
     [2, 1, 1, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 2],
-    [2, 1, 1, 2, 2, 2, 2, 1, 1, 1, 1, 2, 2, 2, 1, 2, 1, 1, 3, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 2],
+    [2, 1, 1, 2, 2, 2, 2, 1, 1, 1, 1, 2, 2, 2, 1, 2, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 2, 1, 1, 1, 1, 2],
     [2, 1, 1, 2, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 2, 1, 2, 1, 1, 1, 2],
     [2, 1, 1, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 2, 1, 2, 1, 2, 1, 1, 1, 1, 2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2],
     [2, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 2, 1, 1, 1, 2, 2, 1, 2, 1, 1, 1, 1, 2, 1, 2, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2],
@@ -71,20 +77,44 @@
         else if (world[i][j] == "1") {
           output += '<div class="coin"></div>';
         }
-        else if (world[i][j] == "3") {
-          output += '<div class="pacman"></div>';
-        }
       }
       output += "</div>";
     }
-    console.log(output);
+    //console.log(output);
     document.getElementById("world").innerHTML = output;
   }
 
+  var pacman = {
+    x: 40,
+    y: 40
+  };
+
+  function displayPacman(){
+    document.getElementById("pacman").style.top = pacman.y+'px';
+    document.getElementById("pacman").style.left = pacman.x+'px';
+  }
 
   displayWorld();
+  displayPacman();
   document.onkeydown = function(e){
-    console.log(e);
+    if(e.keyCode == 37){
+      pacman.x -= 20;
+      console.log("si");
+    }
+    else if(e.keyCode == 38){
+      pacman.y -= 20;
+      console.log("si");
+    }
+    else if(e.keyCode == 39){
+      pacman.x += 20;
+      console.log("si");
+    }
+    else if(e.keyCode == 40){
+      pacman.y += 20;
+      console.log("si");
+    }
+    console.log(e.keyCode);
+    displayPacman();
   }
 </script>
 
