--- a/pacman.html
+++ b/pacman.html
@@ -26,6 +26,18 @@
       background-color: lightskyblue;
     }
 
+    #score {
+      border: 1px, solid, white;
+      width: 100px;
+      height: 50px;
+      background-color: antiquewhite;
+      position:absolute;
+      text-align: center;
+      padding-top: 1rem;
+      top: 300px;
+      left: 100px;
+    }
+
     .coin {
       background-image: url("coin.gif");
       background-position: center;
@@ -48,8 +60,10 @@
 <body>
   <div class="container">
     <div id="world"></div>
+    <div id="score">0</div>
     <div id="pacman" </div>
       <div id="vacio" </div>
+        
       </div>
 </body>
 <script>
@@ -97,6 +111,8 @@
     y: 1
   };
 
+  var puntaje = 0;
+
   function displayPacman() {
     document.getElementById("pacman").style.top = pacman.y * 20 + 'px';
     document.getElementById("pacman").style.left = pacman.x * 20 + 'px';
@@ -109,27 +125,11 @@
       pacman.x--;
       console.log(pacman.x);
       boton = 37;
-      while (boton == 37) {
-        pacman.x--;
-        displayPacman();
-      }
     }
     else if (e.keyCode == 38 && world[pacman.y - 1][pacman.x] != 2) {
       pacman.y--;
       console.log(pacman.y);
       boton = 38;
-      while (boton == 38) {
-        setTimeout(pacmanup(),3000);
-        displayWorld();
-        displayPacman();
-        if (world[pacman.y][pacman.x] == 1) {
-          world[pacman.y][pacman.x] = 0;
-          displayWorld();
-        }
-        if (world[pacman.y - 1][pacman.x] == 2) {
-          break;
-        }
-      }
     }
     else if (e.keyCode == 39 && world[pacman.y][pacman.x + 1] != 2) {
       pacman.x++;
@@ -141,13 +141,15 @@
     }
     if (world[pacman.y][pacman.x] == 1) {
       world[pacman.y][pacman.x] = 0;
+      puntaje += 10;
+      document.getElementById("score").innerHTML = puntaje;
       displayWorld();
     }
     console.log(e.keyCode);
     displayPacman();
   }
 
-  function pacmanup(){
+  function pacmanup() {
     pacman.y--;
   }
 </script>
